# DockStream-master

./: README.md
DockStreamCommunity/AutoDock-Vina-1.2.3/: CMakeLists.txt  run_vina.sh  vina
DockStreamCommunity/AutoDock-Vina-1.2.3/my_build/: CMakeCache.txt  Makefile  cmake_install.cmake
DockStreamCommunity/AutoDock-Vina-1.2.3/result/: debug_vina_out.sdf  my_test_1iep_ligand_vina_out.pdbqt
my_script/: generate_dockstream_json.py  get_ligand_pdbqt.py  get_sdf_coordinate.py  get_vina_out.py  oetoolkit_tutorial_1.py  oetoolkit_tutorial_2.py  parse_dockstream_json.py  time_vina_docking.nohup  time_vina_docking.py  vina_test.py
result/5T35/: 0000.pdbqt  0000_ADV_out.pdbqt  0000_ADV_out.sdf  0000_ADV_out_1.sdf  0000_ADV_out_mae.sdf  0000_glide.sdf  5T35_scoring.json  5t35_apo.pdbqt  5t35_crystal_ligand_ligprep_docking_out.pdbqt  5t35_crystal_ligand_ligprep_docking_out.sdf  5t35_crystal_ligand_ligprep_docking_out_structconvert.sdf  5t35_cystal_ligand_ligprep.pdbqt  5t35_cystal_ligand_ligprep.sdf  ADV_target_prep.json  ligprep_ligand_maestro_docking.sdf
result/6BN7/: 0000.pdbqt  0000_ADV_out.pdbqt  0000_ADV_out.sdf  0000_ADV_out_mae.sdf  0000_glide.sdf  6BN7_scoring.json  6bn7_apo.pdbqt  6bn7_crystal_ligand_ligprep.pdbqt  6bn7_crystal_ligand_ligprep.sdf  6bn7_crystal_ligand_ligprep_docking_out.pdbqt  6bn7_crystal_ligand_ligprep_docking_out.sdf  6bn7_crystal_ligand_ligprep_docking_out_structconvert.sdf  ADV_target_prep.json  ligprep_ligand_maestro_docking.sdf
result/6BOY/: 0000.pdbqt  0000_ADV_out.pdbqt  0000_ADV_out.sdf  0000_ADV_out_mae.sdf  0000_glide.sdf  (+9 more)
(+1755 files in other folders)
